--- a/code/data_from_yolo_to_tf.ipynb
+++ b/code/data_from_yolo_to_tf.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6b26f4a1",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3b8da095",
    "metadata": {},
    "outputs": [],
@@ -8005,17 +8005,220 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3c76e5b",
+   "metadata": {},
+   "source": [
+    "## 4. Crear archivos TFRecord\n",
+    "Vamsoa convertir el dataset a .tfrecord para que tensoflow lo pueda leer correctamnente.\n",
+    "Para crear un archivo TFRecord necesitamos una lista de caracterisiticas, cada caracteristica es un diccionario con la siguiente información:\n",
+    "* image/encoded: imagen codificada en JPEG o PNG\n",
+    "* image/filename: nombre archivo\n",
+    "* image/heigth, mimage/width: dimensiones arvhivo\n",
+    "* image/object/class/label: etiquet de la clase, en este caso 0 (mano)\n",
+    "* image/object/bbox/xmin, xmax, ymin, ymax: coordenadas del bounding box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7b589597",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c26dc23d",
+   "metadata": {},
+   "source": [
+    "#### (image/encoded)\n",
+    "Función que convierte imagen a secuencia de bytes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "918bfdd5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# def _bytes_image_feature(value):\n",
+    "#     return tf.train.Feature(bytes_list = tf.train.BytesList(value =[tf.io.encode_jpeg(value).numpy()] ))\n",
+    "# def _bytes_feature(value):\n",
+    "#     return tf.train.Feature(bytes_list = tf.train.BytesList(value =[value] ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4ed43405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _bytes_feature(value):\n",
+    "    if isinstance(value, type(tf.constant(0))):\n",
+    "        value = value.numpy()\n",
+    "    return tf.train.Feature(bytes_list=tf.train.BytesList(value =[value]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9811b982",
+   "metadata": {},
+   "source": [
+    "Función para leer un valor numérico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "491b8f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _int64_feature(value):\n",
+    "    return tf.train.Feature(int64_list = tf.train.Int64List(value=value))\n",
+    "def _float_feature(value):\n",
+    "    return tf.train.Feature(float_list = tf.train.FloatList(value=value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "e55b7585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_sample(image_path, label_path):\n",
+    "    #leer imagen\n",
+    "    img = Image.open((image_path))\n",
+    "    #asegurar el canal de color\n",
+    "    img = img.convert('RGB')\n",
+    "    #gurardar dimensiones originales\n",
+    "    original_w, original_h = img.size\n",
+    "    #hacer resize para poder pasar el mismo input por le modelo\n",
+    "    img = img.resize((416,416))\n",
+    "\n",
+    "    #leer las etiquetas\n",
+    "    with open(label_path,'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "\n",
+    "    #inicializamos listas\n",
+    "    class_ids = []\n",
+    "    xmin = []\n",
+    "    xmax = []\n",
+    "    ymin = []\n",
+    "    ymax = []\n",
+    "    #rellenamos\n",
+    "    for line in lines:\n",
+    "        parts = line.strip().split()\n",
+    "        class_ids.append(int(parts[0]))\n",
+    "        xmin.append(int(parts[1])*img.size[0]/original_w)#adaptamos la posición a la nueva dimension de la imagen\n",
+    "        xmax.append(int(parts[2])*img.size[0]/original_w)\n",
+    "        ymin.append(int(parts[3])*img.size[1]/original_h)\n",
+    "        ymax.append(int(parts[4])*img.size[1]/original_h)\n",
+    "    \n",
+    "    #comprobación de si con la redimensión las etiquetas siguen estando bien\n",
+    "    # draw = ImageDraw.Draw(img)\n",
+    "    # radio = 5\n",
+    "    # draws = []\n",
+    "    # for i in range(len(class_ids)):\n",
+    "    #     draws.append((xmin[i] - radio, ymin[i] - radio))\n",
+    "    #     draws.append((xmax[i] + radio, ymin[i] - radio))\n",
+    "    #     draws.append((xmin[i] - radio, ymax[i] + radio))\n",
+    "    #     draws.append((xmax[i] + radio, ymax[i] + radio))\n",
+    "    # for i in draws:\n",
+    "    #     draw.ellipse((i[0] - radio, i[1] - radio, i[0] + radio, i[1] + radio),fill='red')\n",
+    "    # img.show()\n",
+    "        \n",
+    "\n",
+    "    example = tf.train.Example(features =tf.train.Features(feature=\n",
+    "    {\n",
+    "        'image/encoded':_bytes_feature(tf.io.encode_jpeg(img)),#imagen codificada\n",
+    "        'image/filename':_bytes_feature(image_path.encode()),#nombre de la imagen codificado\n",
+    "        'image/object/class/label':_int64_feature(class_ids),#clases, es este caso es 0 porque solo reconocemanos\n",
+    "        'image/object/bbox/xmin':_float_feature(xmin),\n",
+    "        'image/object/bbox/xmax':_float_feature(xmax),\n",
+    "        'image/object/bbox/ymin':_float_feature(ymin),\n",
+    "        'image/object/bbox/ymax':_float_feature(ymax),\n",
+    "        'image/height':_int64_feature([img.height]),\n",
+    "        'image/width':_int64_feature([img.width])\n",
+    "    }))\n",
+    "    return example\n",
+    "    \n",
+    "        \n",
+    "# temp_img_path = r'test_data\\test\\images\\VOC2007_3.jpg'\n",
+    "# temp_label_path = r'test_data\\test\\labels\\VOC2007_3.txt'\n",
+    "# create_sample(temp_img_path,temp_label_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6299d631",
+   "metadata": {},
+   "source": [
+    "Una vez tenemos la función que crea os samples podemos empezar a crear los TFRecors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "8ed27f54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TFRecord creado en ../TFRecords/train.tfrecord\n",
+      "TFRecord creado en ../TFRecords/test.tfrecord\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('TFrecors created in ', datetime.timedelta(seconds=37, microseconds=134338))"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def create_tfrecord(data_dir,output_file):\n",
+    "    with tf.io.TFRecordWriter(output_file) as writer:#abrimos documento donde queremos crear el tfreord\n",
+    "        #recorremos imágenes y etiquetas\n",
+    "        images_path = os.path.join(data_dir,'images')\n",
+    "        labels_path = os.path.join(data_dir,'labels','DEF_LABELS')\n",
+    "        # labels_path = os.path.join(data_dir,'labels')\n",
+    "        \n",
+    "        for filename in os.listdir(images_path):\n",
+    "            image_path = os.path.join(images_path, filename)\n",
+    "            label_path = os.path.join(labels_path,filename.replace('.jpg','.txt'))\n",
+    "\n",
+    "            if os.path.exists(label_path): #solo si esa imagen tiene etiqueta\n",
+    "                example = create_sample(image_path,label_path)\n",
+    "                writer.write(example.SerializeToString())\n",
+    "    print(f'TFRecord creado en {output_file}')\n",
+    "\n",
+    "\n",
+    "t0 = datetime.now()\n",
+    "# create_tfrecord('test_data/train','../TFRecords/train.tfrecord')\n",
+    "# create_tfrecord('test_data/test','../TFRecords/test.tfrecord')\n",
+    "create_tfrecord('../data/train','../TFRecords/train.tfrecord')\n",
+    "create_tfrecord('../data/test','../TFRecords/test.tfrecord')\n",
+    "'TFrecors created in ', datetime.now()-t0\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -8029,7 +8232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
