--- a/code/data_from_yolo_to_tf.ipynb
+++ b/code/data_from_yolo_to_tf.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6b26f4a1",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "3b8da095",
    "metadata": {},
    "outputs": [],
@@ -8054,7 +8054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "4ed43405",
    "metadata": {},
    "outputs": [],
@@ -8075,7 +8075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "491b8f8b",
    "metadata": {},
    "outputs": [],
@@ -8088,7 +8088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "e55b7585",
    "metadata": {},
    "outputs": [],
@@ -8101,7 +8101,7 @@
     "    #gurardar dimensiones originales\n",
     "    original_w, original_h = img.size\n",
     "    #hacer resize para poder pasar el mismo input por le modelo\n",
-    "    img = img.resize((416,416))\n",
+    "    img = img.resize((320,320)) #320 porque es la entrada de input de mobilenet 320x320 coco\n",
     "\n",
     "    #leer las etiquetas\n",
     "    with open(label_path,'r') as file:\n",
@@ -8166,7 +8166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "8ed27f54",
    "metadata": {},
    "outputs": [
@@ -8181,10 +8181,10 @@
     {
      "data": {
       "text/plain": [
-       "('TFrecors created in ', datetime.timedelta(seconds=37, microseconds=134338))"
+       "('TFrecors created in ', datetime.timedelta(seconds=36, microseconds=144706))"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
