--- a/code/data_from_yolo_to_tf.ipynb
+++ b/code/data_from_yolo_to_tf.ipynb
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3b8da095",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_images_path = '../data/test/images'\n",
-    "train_images_path = '../data/train/images'\n",
+    "test_images_path = 'data/test/images'\n",
+    "train_images_path = 'data/train/images'\n",
     "\n",
-    "test_labels_path = '../data/test/labels/DEF_LABELS'\n",
-    "train_labels_path = '../data/train/labels/DEF_LABELS'"
+    "test_labels_path = 'data/test/labels/DEF_LABELS'\n",
+    "train_labels_path = 'data/train/labels/DEF_LABELS'"
    ]
   },
   {
@@ -8041,19 +8041,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "918bfdd5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def _bytes_image_feature(value):\n",
-    "#     return tf.train.Feature(bytes_list = tf.train.BytesList(value =[tf.io.encode_jpeg(value).numpy()] ))\n",
-    "# def _bytes_feature(value):\n",
-    "#     return tf.train.Feature(bytes_list = tf.train.BytesList(value =[value] ))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "4ed43405",
    "metadata": {},
@@ -8088,7 +8075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e55b7585",
    "metadata": {},
    "outputs": [],
@@ -8120,21 +8107,7 @@
     "        xmin.append(int(parts[1])*img.size[0]/original_w)#adaptamos la posición a la nueva dimension de la imagen\n",
     "        xmax.append(int(parts[2])*img.size[0]/original_w)\n",
     "        ymin.append(int(parts[3])*img.size[1]/original_h)\n",
-    "        ymax.append(int(parts[4])*img.size[1]/original_h)\n",
-    "    \n",
-    "    #comprobación de si con la redimensión las etiquetas siguen estando bien\n",
-    "    # draw = ImageDraw.Draw(img)\n",
-    "    # radio = 5\n",
-    "    # draws = []\n",
-    "    # for i in range(len(class_ids)):\n",
-    "    #     draws.append((xmin[i] - radio, ymin[i] - radio))\n",
-    "    #     draws.append((xmax[i] + radio, ymin[i] - radio))\n",
-    "    #     draws.append((xmin[i] - radio, ymax[i] + radio))\n",
-    "    #     draws.append((xmax[i] + radio, ymax[i] + radio))\n",
-    "    # for i in draws:\n",
-    "    #     draw.ellipse((i[0] - radio, i[1] - radio, i[0] + radio, i[1] + radio),fill='red')\n",
-    "    # img.show()\n",
-    "        \n",
+    "        ymax.append(int(parts[4])*img.size[1]/original_h)  \n",
     "\n",
     "    example = tf.train.Example(features =tf.train.Features(feature=\n",
     "    {\n",
@@ -8149,11 +8122,7 @@
     "        'image/width':_int64_feature([img.width])\n",
     "    }))\n",
     "    return example\n",
-    "    \n",
-    "        \n",
-    "# temp_img_path = r'test_data\\test\\images\\VOC2007_3.jpg'\n",
-    "# temp_label_path = r'test_data\\test\\labels\\VOC2007_3.txt'\n",
-    "# create_sample(temp_img_path,temp_label_path)"
+    "    "
    ]
   },
   {
@@ -8166,7 +8135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8ed27f54",
    "metadata": {},
    "outputs": [
@@ -8208,8 +8177,7 @@
     "\n",
     "\n",
     "t0 = datetime.now()\n",
-    "# create_tfrecord('test_data/train','../TFRecords/train.tfrecord')\n",
-    "# create_tfrecord('test_data/test','../TFRecords/test.tfrecord')\n",
+    "\n",
     "create_tfrecord('../data/train','../TFRecords/train.tfrecord')\n",
     "create_tfrecord('../data/test','../TFRecords/test.tfrecord')\n",
     "'TFrecors created in ', datetime.now()-t0\n"
